# CS2050

./: .gitignore  CMakeLists.txt
In-ClassLabs/: lab3.c  lab4.c  lab4a.c  lab5a.c  lab6a.c  lab7peer0.c  lab9.c
In-ClassLabs/New_Labs/: lab10a.c  lab11.c  lab12.c  lab5a.c  lab6a.c  lab8.c  lab9a.c
In-ClassLabs/New_Labs/lab13/: header.c  header.h  main.c
In-ClassLabs/New_Labs/lab14/: lab14.c  lab14.h  main.c
In-ClassLabs/Old_Labs/: employee  lab0.c  lab10.c  lab3.c  lab3test.c  lab4.c  lab5.c  lab6.c  lab7.c  lab7peer0.c  lab7peer1.c
Prelabs/: employee.csv  exampleCommaFile  exampleFile4.txt  prelab1.c  prelab2.0.c  prelab2.c  prelab3.0.c  prelab4.0.c  prelab4.c  prelab4test.c  prelab5.0.c  prelab5.c  prelab5Review.c  prelab5TutorTest.c  prelab5test.c  prelab6.c  prelab6coreFunctions.c  prelab7.c  scratchwork.c  struct.c
Prelabs/New_Prelabs/: prelab10circular.c  prelab10double.c  prelab11.c  prelab12.c  prelab8.c  prelab9.c
Prelabs/New_Prelabs/prelab14/: header.c  header.h  main.c
Prelabs/Old_Prelabs/: Tahan_Nick_Prelab8.c  double_pointer_exercise.c  exampleFile  lab6redone.c  prelab1.0.c  prelab1.c  prelab2.0.c  prelab2.c  prelab2test.c  prelab3.0.c  prelab4comma.c  prelab4test.c  prelab5.c  prelab5Review.c  prelab5TutorTest.c  prelab5test.c  prelab6.c  prelab6coreFunctions.c  prelab7.c  scratchwork.c
Side-projects/: Nathan_Buzz.c  Nathan_Lab1.c  Nathan_Lab3.c  Nathan_Prelab4.c  Nathan_prelab7.c  app_functions.c  fibonacci_sequence.c  pointerExample.c  pointer_practice.c
