cmake_minimum_required(VERSION 3.12)
project(CS2050 C)
set(CMAKE_C_STANDARD 99)
add_executable(lab0.c In-ClassLabs/lab0.c In-ClassLabs/lab6a.c)
add_executable(prelab1.c Prelabs/prelab1.c)
add_executable(prelab2.c Prelabs/prelab2.c)
add_executable(prelab2test.c Prelabs/prelab2test.c)
add_executable(lab3.c In-ClassLabs/lab3.c)
add_executable(lab3test.c In-ClassLabs/lab3test.c)
add_executable(prelab4.c Prelabs/prelab4.c)
add_executable(prelab4test.c Prelabs/prelab4test.c)
add_executable(prelab4comma.c Prelabs/prelab4comma.c)
add_executable(lab4.c In-ClassLabs/lab4.c)
add_executable(prelab5.c Prelabs/prelab5.c)
add_executable(prelab5Redone.c Prelabs/prelab5Redone.c)
add_executable(prelab5test.c Prelabs/prelab5test.c)
add_executable(prelab5TutorTest.c Prelabs/prelab5TutorTest.c)
add_executable(prelab5Review.c Prelabs/prelab5Review.c)
add_executable(lab5.c In-ClassLabs/lab5.c)
add_executable(prelab6.c Prelabs/prelab6.c)
add_executable(prelab6coreFunctions Prelabs/prelab6coreFunctions.c)
add_executable(double_pointer_exercise.c Prelabs/double_pointer_exercise.c)
add_executable(lab6redone.c Prelabs/lab6redone.c)
add_executable(prelab7.c Prelabs/prelab7.c)
add_executable(lab7.c In-ClassLabs/lab7.c)
add_executable(lab7peer0.c In-ClassLabs/lab7peer0.c)
add_executable(lab7peer1.c In-ClassLabs/lab7peer1.c)
add_executable(scratchwork.c Prelabs/scratchwork.c)
add_executable(Tahan_Nick_Prelab8.c Prelabs/Tahan_Nick_Prelab8.c)
add_executable(lab9.c In-ClassLabs/lab9.c)
add_executable(lab10.c In-ClassLabs/lab10.c)
add_executable(fibonacci_sequence Side-projects/fibonacci_sequence.c)
add_executable(lab6.c In-ClassLabs/lab6.c)
add_executable(Nathan_Buzz.c Side-projects/Nathan_Buzz.c)
add_executable(Nathan_Lab1.c Side-projects/Nathan_Lab1.c)
add_executable(prelab1.0.c Prelabs/prelab1.0.c)
add_executable(prelab2.0.c Prelabs/prelab2.0.c)
add_executable(prelab3.0.c Prelabs/prelab3.0.c)
add_executable(prelab4.0.c Prelabs/prelab4.0.c)
add_executable(lab4a.c In-ClassLabs/lab4a.c)
add_executable(Nathan_Lab3.c Side-projects/Nathan_Lab3.c)
add_executable(Nathan_Prelab4.c Side-projects/Nathan_Prelab4.c)
add_executable(prelab5.0.c Prelabs/prelab5.0.c)
add_executable(lab6a.c In-ClassLabs/lab6a.c)
