cmake_minimum_required(VERSION 3.12)
project(CS2050 C)
set(CMAKE_C_STANDARD 99)
add_executable(lab0.c In-ClassLabs/Old_Labs/lab0.c In-ClassLabs/New_Labs/lab6a.c)
add_executable(prelab1.c Prelabs/Old_Prelabs/prelab1.c)
add_executable(prelab2.c Prelabs/Old_Prelabs/prelab2.c)
add_executable(prelab2test.c Prelabs/Old_Prelabs/prelab2test.c)
add_executable(lab3.c In-ClassLabs/Old_Labs/lab3.c)
add_executable(lab3test.c In-ClassLabs/Old_Labs/lab3test.c)
add_executable(prelab4.c Prelabs/Old_Prelabs/prelab4.c)
add_executable(prelab4test.c Prelabs/Old_Prelabs/prelab4test.c)
add_executable(prelab4comma.c Prelabs/Old_Prelabs/prelab4comma.c)
add_executable(lab4.c In-ClassLabs/Old_Labs/lab4.c)
add_executable(prelab5.c Prelabs/Old_Prelabs/prelab5.c)
add_executable(prelab5Redone.c Prelabs/Old_Prelabs/prelab5Redone.c)
add_executable(prelab5test.c Prelabs/Old_Prelabs/prelab5test.c)
add_executable(prelab5TutorTest.c Prelabs/Old_Prelabs/prelab5TutorTest.c)
add_executable(prelab5Review.c Prelabs/Old_Prelabs/prelab5Review.c)
add_executable(lab5.c In-ClassLabs/Old_Labs/lab5.c)
add_executable(prelab6.c Prelabs/Old_Prelabs/prelab6.c)
add_executable(prelab6coreFunctions Prelabs/Old_Prelabs/prelab6coreFunctions.c)
add_executable(double_pointer_exercise.c Prelabs/Old_Prelabs/double_pointer_exercise.c)
add_executable(lab6redone.c Prelabs/Old_Prelabs/lab6redone.c)
add_executable(prelab7.c Prelabs/Old_Prelabs/prelab7.c)
add_executable(lab7.c In-ClassLabs/Old_Labs/lab7.c)
add_executable(lab7peer0.c In-ClassLabs/Old_Labs/lab7peer0.c)
add_executable(lab7peer1.c In-ClassLabs/Old_Labs/lab7peer1.c)
add_executable(scratchwork.c Prelabs/Old_Prelabs/scratchwork.c)
add_executable(Tahan_Nick_Prelab8.c Prelabs/Old_Prelabs/Tahan_Nick_Prelab8.c)
add_executable(lab9.c In-ClassLabs/Old_Labs/lab9.c)
add_executable(lab10.c In-ClassLabs/Old_Labs/lab10.c)
add_executable(fibonacci_sequence Side-projects/fibonacci_sequence.c)
add_executable(lab6.c In-ClassLabs/Old_Labs/lab6.c)
add_executable(Nathan_Buzz.c Side-projects/Nathan_Buzz.c)
add_executable(Nathan_Lab1.c Side-projects/Nathan_Lab1.c)
add_executable(prelab1.0.c Prelabs/Old_Prelabs/prelab1.0.c)
add_executable(prelab2.0.c Prelabs/Old_Prelabs/prelab2.0.c)
add_executable(prelab3.0.c Prelabs/Old_Prelabs/prelab3.0.c)
add_executable(prelab4.0.c Prelabs/Old_Prelabs/prelab4.0.c)
add_executable(lab4a.c In-ClassLabs/New_Labs/lab5a.c)
add_executable(Nathan_Lab3.c Side-projects/Nathan_Lab3.c)
add_executable(Nathan_Prelab4.c Side-projects/Nathan_Prelab4.c)
add_executable(prelab5.0.c Prelabs/Old_Prelabs/prelab5.0.c)
add_executable(lab6a.c In-ClassLabs/New_Labs/lab6a.c)
add_executable(pointerExample.c Side-projects/pointerExample.c)
add_executable(pointer_practice.c Side-projects/pointer_practice.c)
add_executable(prelab8.c Prelabs/New_Prelabs/prelab8.c)
add_executable(lab8.c In-ClassLabs/New_Labs/lab8.c)
add_executable(prelab9.c Prelabs/New_Prelabs/prelab9.c)
add_executable(lab9a.c In-ClassLabs/New_Labs/lab9a.c)
add_executable(prelab10circular.c Prelabs/New_Prelabs/prelab10circular.c)
add_executable(prelab10double.c Prelabs/New_Prelabs/prelab10double.c)
add_executable(lab10a.c In-ClassLabs/New_Labs/lab10a.c)
add_executable(Nathan_prelab7.c Side-projects/Nathan_prelab7.c)
add_executable(pralab11.c Prelabs/New_Prelabs/prelab11.c)
add_executable(lab11.c In-ClassLabs/New_Labs/lab11.c)
add_executable(prelab12.c Prelabs/New_Prelabs/prelab12.c)
add_executable(lab12.c In-ClassLabs/New_Labs/lab12.c)
add_executable(lab13 In-ClassLabs/New_Labs/lab13/main.c In-ClassLabs/New_Labs/lab13/header.c)
add_executable(prelab14 Prelabs/New_Prelabs/prelab14/main.c Prelabs/New_Prelabs/prelab14/header.c)
add_executable(lab14 In-ClassLabs/New_Labs/lab14/main.c In-ClassLabs/New_Labs/lab14/lab14.c)

